syntax = "proto3";
package api;

import "inter/wire/wire.proto";

service Node {
    rpc SyncEvents(KnownEvents) returns (KnownEvents) {}
    rpc GetEvent(EventRequest) returns (wire.Event) {}
    rpc GetPeerInfo(PeerRequest) returns (PeerInfo) {}
}


message KnownEvents {
    uint64 SuperFrameN = 1;
    map<string,uint64> Lasts = 2;
}

message EventRequest {
    string PeerID = 1;
    uint64 SuperFrameN = 2;
    uint64 Seq = 3;
    bytes Hash = 4;
}

message PeerRequest {
    string PeerID = 1;
}

message PeerInfo {
    string ID = 1;
    string Host = 2;
}

